--- a/project-hero/index-3.html
+++ b/project-hero/index-3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mary Smith | Portfolio | Sample Hero Block Layout 3</title>
+    <title>Neema Peter | Portfolio | Sample Hero Block Layout 3</title>
     <meta name="description" content="Gallery of hero block layouts.">
 
 	<!-- Preload large image -->
@@ -31,29 +31,35 @@
 
 
     <!-- REPLACE this empty tag with your own header tag content -->
-	
 
-    <section class="theme-light section-selector-1 cols-2-half flex-row-reverse">
+<!-- header starts here -->
+<header class="theme-light cols-2-half text-center-mobile flex-row-reverse">
+    <div class="col-2 col-text">
+        <h1>Look great.<br><span class="reveal-fade-in-header">Feel fantastic.</span></h1>
+        <h2>Exclusive designs direct to your door.</h2>
 
-        <div class="col-2 col-text">
-            <h2>Look great.
-				Feel fantastic.
-			</h2>
-            <p>Exclusive designs direct to your door.</p>
-
-<div class="container-btn">
-			<a href="#" class="btn btn-outline btn-soft"><i class="fas fa-shopping-cart"></i><span>Order now</span></a><a href="#" class="btn btn-solid btn-soft"><span>View details</span><i class="fas fa-arrow-right"></i></a>
-		</div>
-
-</div>
-
-        <div class="col-2 col-visual desktop-bleed-all">
-            <figure>
-                <img src="https://lunevedy.com/ui/assets/img/1024x618-cheesecake.jpg" alt="Placeholder image">
-            </figure>
+        <div class="container-btn">
+            <a href="#" class="btn btn-soft btn-outline">
+                <span>Full collection</span>
+               <i class="fa-solid fa-chevron-right"></i>
+            </a>
+            <a href="#" class="btn btn-solid btn-soft">
+                <span>New arrivals</span>
+                <i class="fa-solid fa-chevron-right"></i>
+            </a>
         </div>
+    </div>
 
-    </section>
+    <div class="col-2 col-visual desktop-bleed-all">
+        <figure>
+            <img src="assets/img/fashion.jpg" alt="Placeholder image">
+        </figure>
+    </div>
+</header>
+
+<!-- header ends here -->
+
+
 
 
 
