--- a/project-hero/index-4.html
+++ b/project-hero/index-4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mary Smith | Portfolio | Sample Hero Block Layout 4</title>
+    <title>Neema Peter| Portfolio | Sample Hero Block Layout 4</title>
     <meta name="description" content="Gallery of hero block layouts.">
 
 	<!-- Preload large image -->
@@ -31,7 +31,31 @@
 
 	
     <!-- REPLACE this empty tag with your own header tag content -->
-	<header></header>
+	
+<!-- header starts here -->
+<header class="theme-light cols-2-half text-center-mobile flex-row-reverse">
+
+    <div class="col-2 col-text">
+			<div class="badge corners-soft">10% off all week</div>
+        <h1>Claire’s Hair</h1>
+        <h2>Our team of stylists offer the latest fashions and techniques.</h2>
+
+        <div class="container-btn">
+            <a href="#" class="btn btn-outline btn-soft"><span>Our salon</span><i class="fas fa-shopping-cart"></i></a><a href="#" class="btn btn-solid btn-soft"><span>Book now</span><i class="fas fa-arrow-right"></i></a>
+        </div>
+
+    </div>
+
+    <div class="col-2 col-visual desktop-bleed-all">
+        <figure>
+            <img src="assets/img/hair.png" alt="Placeholder image">
+        </figure>
+    </div>
+
+</header>
+<!-- header ends here -->
+
+
 
 
 
