--- a/project-hero/index-5.html
+++ b/project-hero/index-5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mary Smith | Portfolio | Sample Hero Block Layout 5</title>
+    <title>Neema Peter | Portfolio | Sample Hero Block Layout 5</title>
     <meta name="description" content="Gallery of hero block layouts.">
 
 	<!-- Preload large image -->
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="assets/css/custom-5.css" />
 
 	<!-- Google Fonts -->
+	 
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@600&family=Zilla+Slab&display=swap" rel="stylesheet">
 
     <!-- Font Awesome 6 icons. Delete if not using. -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -27,7 +31,31 @@
 <body>
 
     <!-- REPLACE this empty tag with your own header tag and content -->
-    <header></header>
+  
+<!-- header starts here -->
+<header class="cols-2-half text-center-mobile theme-dark">
+
+    <div class="col-2 col-text">
+			<div class="badge">JENNIFER CHANG</div>
+        <h1>UI DESIGNER</h1>
+        <h2>Creating human-friendly interfaces for mobile and web apps.</h2>
+
+        <div class="container-btn">
+            <a href="#" class="btn btn-outline btn-soft"><span>Recent work</span><i class="fa-solid fa-folder-open"></i></a><a href="#" class="btn btn-solid btn-soft"><span>Hire me</span><i class="fa-solid fa-envelope"></i></a>
+        </div>
+
+    </div>
+
+    <div class="col-2 col-visual desktop-bleed-all">
+        <figure>
+            <img src="assets/img/ui-designer.jpg" alt="Placeholder image">
+        </figure>
+    </div>
+
+</header>
+<!-- header ends here -->
+
+
 
 
 	<!-- =============== Do not remove anything below this line ================= -->
